--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <main class="animation">
         <!-- <div class="backer"></div> -->
         <!-- intro image -->
-        <img src="images/snape.png" alt="snape intro" class="snape-intro">
+        <img src="images/snape.png" alt="snape intro" class="snape-intro zoom-snape animate-snape">
         <!-- end intro image-->
 
         <!-- svg gets imported here-->
-        <svg id="professor-lesson" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1348.25 792">
+        <svg id="professor-lesson" class="text-fade" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1348.25 792">
             <title>snape-script</title>
             <g id="intro">
               <path id="which" d="M106.24,41q1.89-4.53,3.1-7.82a2.41,2.41,0,0,1,.32-.67.51.51,0,0,1,.4-.14.68.68,0,0,1,.4.12.32.32,0,0,1,.17.28,20.09,20.09,0,0,1-.91,2.23L109,36.5l-5.82,13.2-2.9-5.45-2.27-4-1.79,3.28L93.53,48.6,93,49.7,90.7,44.12l-2-4.84q-1.48-3.64-2.85-6.55l-.07-.15h7.33l1,2.57Q95.68,39,96.58,41l2.17-4,.8-1.5.54-1,.9-1.69c.14-.27.28-.52.4-.73l1.74,3.38C104.13,37.33,105.16,39.18,106.24,41Zm11.42-3.55a17.88,17.88,0,0,1,1.84-1.12,8,8,0,0,1,3.48-.85,5.53,5.53,0,0,1,2.24.44,3.25,3.25,0,0,1,1.48,1.22,7.07,7.07,0,0,1,.57,3.4l0,1.75,0,2.31.09,4h-6l0-7.24-.07-3.7c-.08-.41-.36-.61-.86-.61a2.84,2.84,0,0,0-1.23.33,8.11,8.11,0,0,0-1.52,1l0,3,0,5.09,0,2.17h-6l0-4.94V38l0-4.88v-.53h6v.32l0,2,0,1.24Zm18.25-1.66v.34l0,1.83,0,2.84,0,4.31,0,2.43,0,1h-6l.06-4.31,0-3.81,0-2,0-2.23v-.45Zm-3-4.1c2.07,0,3.1.54,3.1,1.62a1.34,1.34,0,0,1-.82,1.22,4.78,4.78,0,0,1-2.29.44c-2,0-2.94-.55-2.94-1.66S130.91,31.69,132.87,31.67Zm11.32,6.65V46.9a1.74,1.74,0,0,0,.18,1,.91.91,0,0,0,.74.24,5,5,0,0,0,2.72-.85A6.63,6.63,0,0,0,150,45c.17-.29.34-.43.5-.43a.42.42,0,0,1,.32.16A.48.48,0,0,1,151,45a2.2,2.2,0,0,1-.68,1.19,8.46,8.46,0,0,1-1.58,1.38,7,7,0,0,1-3.94,1.23A6.6,6.6,0,0,1,140,47.05a6.48,6.48,0,0,1-2.13-4.91,6.37,6.37,0,0,1,2.25-5,6.71,6.71,0,0,1,4.65-1.69,7.12,7.12,0,0,1,3.86,1,5.37,5.37,0,0,1,1.15,1,1.46,1.46,0,0,1,.44.86.41.41,0,0,1-.13.3.43.43,0,0,1-.31.12c-.17,0-.37-.19-.62-.56a4.38,4.38,0,0,0-1.7-1.37,4.92,4.92,0,0,0-2.2-.58.91.91,0,0,0-.89.39A4.55,4.55,0,0,0,144.19,38.32Zm14-.89A17.88,17.88,0,0,1,160,36.31a8,8,0,0,1,3.48-.85,5.53,5.53,0,0,1,2.24.44,3.25,3.25,0,0,1,1.48,1.22,7.07,7.07,0,0,1,.57,3.4l0,1.75,0,2.31.09,4h-6l0-7.24-.07-3.7c-.08-.41-.36-.61-.86-.61a2.84,2.84,0,0,0-1.23.33,8.11,8.11,0,0,0-1.52,1l0,3,0,5.09,0,2.17h-6l0-4.94V38l0-4.88v-.53h6v.32l0,2,0,1.24Z" style="fill: #231f20"/>
